--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,12 @@
-<h2>{{ hero.name | uppercase }} Details</h2>
-<div><span>id: </span>{{ hero.id }}</div>
-<div><span>name: </span>{{ hero.name }}</div>
+<h2>
+	{{ hero.name | uppercase }} Details
+</h2>
+<div>
+	<span>id: </span>{{ hero.id }}
+</div>
+<div>
+	<label for="name">
+		Name:
+		<input [(ngModel)]="hero.name" id="name" type="text" placeholder="Name">
+	</label>
+</div>
