--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,3 +1,14 @@
-<p>
-  hero-detail works!
-</p>
+<div *ngIf="hero">
+	<h2>
+		{{ hero.name | uppercase }} Details
+	</h2>
+	<div>
+		<span>id: </span>{{ hero.id }}
+	</div>
+	<div>
+		<label for="name">
+			Name:
+			<input [(ngModel)]="hero.name" id="name" type="text" placeholder="Name">
+		</label>
+	</div>
+</div>
